--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-ul {
+li ul {
     font-family: 'San Franciso', 'Helvetica Neue', 'Helvetica', sans-serif;
     font-size: 1.5rem;
     line-height: 150%;
