--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-ul li {
-    font-family: 'San Franciso', 'Helvetica Neue', 'Helvetica', sans-serif;
+body {
+    font-family: sans-serif;
     font-size: 1.5rem;
     line-height: 150%;
 }
