--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/thumbs/style.css
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/thumbs/style.css
@@ -29,6 +29,10 @@
 body {
   cursor: none; }
 
+svg {
+  display: none;
+}
+
 .noscroll {
   overflow: hidden; }
 
@@ -49,7 +53,7 @@ body {
   -webkit-perspective: 1000px;
           perspective: 1000px; }
   #titlebox .title {
-    padding-top: 5vh;
+    padding-top: 22.5vh;
     -webkit-transform: rotateY(-20deg);
             transform: rotateY(-20deg); }
   #titlebox .subtitle {
