--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/style.css
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/style.css
@@ -265,9 +265,10 @@ body {
   .refbox {
     width: 100vw;
     left: 0vw;
+    background-color: rgba(255, 255, 255, 0.9);
     border-top-width: 0.4vw;
     padding: 3vw 0;
-    font-size: 3vw; }
+    font-size: 4vw; }
   .one img {
     width: 100vw;
     margin-top: -45vw;
