--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/style.css
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/style.css
@@ -224,6 +224,8 @@ body {
   margin-bottom: 10vw; }
 
 @media (max-width: 1000px) {
+  body {
+    font-size: 18px !important; }
   #titlebox {
     overflow-y: hidden;
     margin-bottom: 10vw; }
