--- a/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/style.css
+++ b/fa090848b6b938b86dc2ad018f275ffc663b55dd/kafkaesque/style.css
@@ -5,7 +5,7 @@ body {
 #titlebox {
   width: 100vw;
   height: auto;
-  margin-bottom: -7vw;
+  margin-bottom: -8vw;
   font-family: "Averia Gruesa Libre", monospace;
   color: rgba(0, 0, 0, 0.9); }
   #titlebox .titleimage img {
@@ -39,8 +39,6 @@ body {
     color: rgba(0, 0, 0, 0.9);
     font-size: 2.2vw;
     letter-spacing: 0.1vw;
-    -webkit-transform: translateX(0vw) translateY(1.5vw);
-            transform: translateX(0vw) translateY(1.5vw);
     border-bottom-color: rgba(0, 0, 0, 0.9);
     border-bottom-style: solid;
     border-bottom-width: 0.2vw; }
@@ -100,52 +98,50 @@ body {
 
 .one img {
   width: 100vw;
-  margin-top: -40vw;
-  margin-bottom: -17vw; }
+  margin-top: -38vw;
+  margin-bottom: -15.5vw; }
 
 .oneb img {
   width: 50vw;
   margin-left: 42vw;
-  margin-top: -9vw;
-  margin-bottom: -60vw; }
+  margin-top: -8vw;
+  margin-bottom: -28vw; }
 
 .two img {
   width: 78vw;
   margin-left: 6vw;
-  margin-top: -19vw;
-  margin-bottom: -15vw; }
+  margin-top: -18vw;
+  margin-bottom: -14vw; }
 
 .three img {
   width: 60vw;
   margin-left: 17vw;
-  margin-top: -23vw;
-  margin-bottom: -15vw; }
+  margin-top: -21vw;
+  margin-bottom: -13vw; }
 
 .four img {
   width: 50vw;
-  margin-top: -9vw;
+  margin-top: -8vw;
   margin-bottom: 0vw; }
 
 .five img {
   width: 50vw;
   margin-left: 50vw;
-  margin-top: -14vw;
+  margin-top: -13vw;
   margin-bottom: -15vw; }
 
 .six img {
   width: 100vw;
-  margin-top: -2vw;
-  margin-bottom: -25vw; }
+  margin-bottom: -24vw; }
 
 .sixb img {
   width: 18vw;
-  float: right;
-  margin-top: -6vw; }
+  float: right; }
 
 .sevena img {
   width: 8vw;
   float: left;
-  margin-top: -1vw;
+  margin-top: 0.5vw;
   margin-left: 15vw; }
 
 .sevenb img {
@@ -156,22 +152,22 @@ body {
 
 .eight img {
   width: 78vw;
-  margin-top: -13vw;
-  margin-bottom: -21.5vw; }
+  margin-top: -11vw;
+  margin-bottom: -19.5vw; }
 
 .nine img {
   width: 100vw;
-  margin-top: -8vw;
-  margin-bottom: -7vw; }
+  margin-top: -7vw;
+  margin-bottom: -6vw; }
 
 .ten img {
   width: 100vw;
-  margin-top: -22vw;
+  margin-top: -21vw;
   margin-bottom: -4vw; }
 
 .tena img {
   width: 30vw;
-  margin-top: 4vw;
+  margin-top: 6vw;
   float: right;
   padding-left: 2vw; }
 
@@ -188,14 +184,14 @@ body {
 
 .fourteen img {
   width: 100vw;
-  margin-top: -22vw;
-  margin-bottom: -4vw; }
+  margin-top: -16vw;
+  margin-bottom: -3vw; }
 
 .fifteen img {
   width: 30vw;
   margin-left: 33vw;
-  margin-top: -10vw;
-  margin-bottom: -8vw; }
+  margin-top: -9vw;
+  margin-bottom: -7vw; }
 
 .sixteen img {
   width: 50vw;
@@ -211,24 +207,21 @@ body {
 .eighteen img {
   width: 100vw;
   margin-top: -18vw;
-  margin-bottom: -3vw; }
+  margin-bottom: -2vw; }
 
 .nineteen img {
   width: 35vw;
-  margin: -12vw 0vw -16vw 59vw;
+  margin: -10vw 0vw -16vw 59vw;
   opacity: 0.9; }
 
 .twenty img {
   width: 100vw;
-  margin-top: -3vw;
   margin-bottom: 10vw; }
 
 @media (max-width: 1000px) {
-  body {
-    font-size: 18px !important; }
   #titlebox {
     overflow-y: hidden;
-    margin-bottom: 10vw; }
+    margin-bottom: 5vw; }
     #titlebox .titleimage img {
       width: 200vw; }
     #titlebox .title {
@@ -238,12 +231,12 @@ body {
       letter-spacing: 0.5vw; }
     #titlebox .author {
       left: 47vw;
-      top: 93vw;
+      top: 37vw;
       font-size: 5vw;
       letter-spacing: 0.3vw; }
     #titlebox .illustrator {
       left: 47vw;
-      top: 100vw;
+      top: 93vw;
       font-size: 4vw;
       letter-spacing: 0.2vw; }
   .entry {
@@ -254,7 +247,8 @@ body {
       letter-spacing: 0.3vw;
       -webkit-transform: translateX(0vw) translateY(1.2vw);
               transform: translateX(0vw) translateY(1.2vw);
-      border-bottom-width: 0.4vw; }
+      border-bottom-width: 0.4vw;
+      margin-bottom: 1.5vw; }
     .entry .entrybody {
       font-size: 2.5vw;
       line-height: 6vw;
@@ -267,19 +261,20 @@ body {
   .refbox {
     width: 100vw;
     left: 0vw;
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 0.9);
     border-top-width: 0.4vw;
     padding: 3vw 0;
-    font-size: 5vw; }
+    font-size: 4vw;
+    line-height: 4.5vw; }
   .one img {
     width: 100vw;
     margin-top: -45vw;
-    margin-bottom: -15vw; }
+    margin-bottom: -11vw; }
   .oneb img {
     width: 50vw;
     margin-left: 42vw;
     margin-top: -14vw;
-    margin-bottom: -50vw; }
+    margin-bottom: -20vw; }
   .two img {
     width: 100vw;
     margin-left: 0vw;
@@ -292,36 +287,36 @@ body {
     margin-bottom: -20vw; }
   .four img {
     width: 75vw;
-    margin-top: -6vw;
-    margin-bottom: 0vw; }
+    margin-top: -2vw;
+    margin-bottom: -1vw; }
   .five img {
     width: 70vw;
     margin-left: 30vw;
-    margin-top: -25vw;
+    margin-top: -23vw;
     margin-bottom: -20vw; }
   .six img {
     width: 100vw;
-    margin-top: -4vw;
+    margin-top: -1vw;
     margin-bottom: -15vw; }
   .sixb img {
     width: 18vw;
     float: right;
-    margin-top: -6.5vw; }
+    margin-top: -12vw; }
   .sevena img {
-    width: 29vw;
+    width: 26vw;
     float: left;
-    margin-top: -2vw;
+    margin-top: 2.5vw;
     margin-left: 0vw; }
   .sevenb img {
     display: none; }
   .eight img {
     width: 75vw;
     margin-left: 17vw;
-    margin-top: -14vw;
+    margin-top: -2vw;
     margin-bottom: -9vw; }
   .nine img {
     width: 100vw;
-    margin-top: -12vw;
+    margin-top: -8vw;
     margin-bottom: -8vw; }
   .ten img {
     width: 100vw;
@@ -342,33 +337,33 @@ body {
   .thirteen img {
     width: 60vw;
     margin-left: 18vw;
-    margin-top: -22vw;
-    margin-bottom: -10vw; }
+    margin-top: -18vw;
+    margin-bottom: -8vw; }
   .fourteen img {
     width: 100vw;
-    margin-top: -22vw;
+    margin-top: -25vw;
     margin-bottom: -4vw; }
   .fifteen img {
     width: 80vw;
     margin-left: 6vw;
-    margin-top: -20vw;
+    margin-top: -18vw;
     margin-bottom: -15vw; }
   .sixteen img {
     width: 70vw;
     margin-left: 30vw;
-    margin-top: -35vw;
-    margin-bottom: -30vw; }
+    margin-top: -30vw;
+    margin-bottom: -26vw; }
   .seventeen img {
     width: 100vw;
     margin-top: -22vw;
     margin-bottom: -36vw; }
   .eighteen img {
     width: 100vw;
-    margin-top: -25vw;
+    margin-top: -23vw;
     margin-bottom: -3vw; }
   .nineteen img {
     width: 60vw;
-    margin: -18vw 0vw -26vw 40vw;
+    margin: -16vw 0vw -26vw 40vw;
     opacity: 0.9; }
   .twenty img {
     width: 100vw;
