--- a/anenglishtowelshdictionaryoffeministterms/style.css
+++ b/anenglishtowelshdictionaryoffeministterms/style.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,400i,700,700i|Cormorant+Unicase:400,700");
 #main {
   width: 80vw;
-  margin: 2rem auto;
+  margin: 0 auto;
 }
 
 #main a {
