--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@
     #containergrid .menuscroller .spacer {
       opacity: 0; }
     #containergrid .menuscroller .christmasafterbrexit {
-      background-image: url("/s/CABbg.jpg");
+      background-image: url("/s/CABstars.jpg");
       background-position: 0% 90%; }
       #containergrid .menuscroller .christmasafterbrexit .title {
         font-family: 'Cormorant Garamond', serif; }
